fix for align-form-horizontal and validate login link and user table ordering

--- a/client/css/common.css
+++ b/client/css/common.css
@@ -68,7 +68,7 @@ ol.align-form-horizontal,
 .align-form-horizontal,
 .margin-left {
     /* align a block with a form-horizontal form from bootstrap */
-    margin-left: 195px;
+    margin-left: 180px;
 }
 .eighty {
     width: 80px;
